<resources>
    <string name="app_name">android_global_hw</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_description">None description</string>
    <string name="default_link">None link</string>
    <string name="start">START LINK</string>
    <string name="back">Back</string>
    <string name="enter_header">Enter your header</string>
    <string name="enter_description">Enter your description</string>
    <string name="close">CLOSE MARKER</string>
    <string name="delete">DELETE MARKER</string>
    <string name="chooser_title">Choose Browser</string>
    <string name="default_header">None header</string>
    <string name="edit">Edit</string>
    <string name="sort_ab">Sort</string>
    <string name="remove">Remove</string>
    <string name="add">Add new Marker</string>
    <string name="save">Save marker</string>
    <string name="save_title">Saving</string>
    <string name="save_message">Do you want to quit without save?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>