<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".DetailMarkerFragment">


    <ImageView
        android:id="@+id/det_marker_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="5dp"
        android:src="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/det_marker_link"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/det_marker_icon"
        android:gravity="start"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:text="@string/default_link"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/det_marker_icon"
        android:text="@string/start" />

    <Button
        android:id="@+id/close_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_button"
        android:layout_toEndOf="@id/det_marker_icon"
        android:text="@string/close"
        />
    <Button
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/close_button"
        android:layout_toEndOf="@id/det_marker_icon"
        android:text="@string/delete"/>

    <EditText
        android:id="@+id/det_marker_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/det_marker_link"
        android:maxLines="1"
        android:hint="@string/enter_header"
        android:textSize="25sp"

        />
    <EditText
        android:id="@+id/det_marker_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/det_marker_header"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:maxLines="7"
        android:gravity="top"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:hint="@string/enter_description"
        android:textSize="20sp" />

</RelativeLayout>