<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/icon_toolbar_search"
        android:title="@android:string/search_go"
        yourapp:actionViewClass="androidx.appcompat.widget.SearchView"
        yourapp:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/icon_toolbar_edit"
        android:title="@string/edit"
        yourapp:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/icon_toolbar_sort"
        android:title="@string/sort_ab"
        yourapp:showAsAction="always" />

    <item
        android:id="@+id/action_remove"
        android:icon="@drawable/icon_toolbar_remove"
        android:title="@string/remove"
        yourapp:showAsAction="always" />
</menu>