<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".MarkerFragment">


    <ImageView
        android:id="@+id/marker_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="5dp"
        android:src="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/marker_link"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@+id/marker_icon"
        android:gravity="start"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:text="@string/default_link"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/marker_link"
        android:layout_toEndOf="@id/marker_icon"
        android:text="@string/start" />

    <EditText
        android:id="@+id/marker_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/marker_icon"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="top"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/default_description"
        android:textSize="20sp" />

</RelativeLayout>